<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/header_Advance"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:background="@drawable/bg_page"
	>
	<com.esp.spycatch.uc.PageTitle
		android:id="@+id/pageTitle"
		android:layout_width="fill_parent"
       	android:layout_height="wrap_content"
       	android:layout_alignParentTop="true"
		/> 
		<ScrollView
 		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_below="@+id/pageTitle"
		android:layout_above="@+id/view_footer"
		android:fillViewport="true"
		>
 		<LinearLayout
 			android:id="@+id/view_AdvanceSupport"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:padding="10dp"
 			>
 			<RelativeLayout
				android:id="@+id/View_Weekdays"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="5dp"
				>
				<TextView
					android:id="@+id/txtView_Weekdays"
					android:layout_height="wrap_content"
					android:layout_width="wrap_content"
					android:text="@string/txtview_settings_WeekDay"
					style="@style/Caption"
					/>
				<TextView
					android:id="@+id/editText_Weekdays"
				 	android:layout_width="fill_parent"
				 	android:layout_height="40dp"
					android:singleLine="true"
					android:background="#FFFFFF"
					android:gravity="center_vertical|left"
					style="@style/NormalBlackText"
					android:layout_below="@+id/txtView_Weekdays"
					android:scrollHorizontally="true"
					android:tag="*Select Weekdays"
					android:paddingLeft="5dp"
					/>	
			</RelativeLayout>
			<RelativeLayout
				android:id="@+id/View_FromTime"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="5dp"
				>
				<TextView
					android:id="@+id/txtView_FromTime"
					android:layout_height="wrap_content"
					android:layout_width="wrap_content"
					android:text="@string/txtview_settings_FromTime"
					style="@style/Caption"
					/>
				<TextView
					android:id="@+id/editText_FromTime"
				 	android:layout_width="fill_parent"
				 	android:layout_height="40dp"
					android:singleLine="true"
					android:background="#FFFFFF"
					style="@style/NormalBlackText"
					android:gravity="center_vertical|center"
					android:layout_below="@+id/txtView_FromTime"
					android:tag="*Select From Time"
					/>	
			</RelativeLayout>
			<RelativeLayout
				android:id="@+id/View_ToTime"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="5dp"
				>
				<TextView
					android:id="@+id/txtView_ToTime"
					android:layout_height="wrap_content"
					android:layout_width="wrap_content"
					android:text="@string/txtview_settings_ToTime"
					style="@style/Caption"
					/>
				<TextView
					android:id="@+id/editText_ToTime"
				 	android:layout_height="40dp"
					android:layout_width="fill_parent"
					android:singleLine="true"	
					android:gravity="center_vertical|center"
					style="@style/NormalBlackText"
					android:background="#FFFFFF"
					android:layout_below="@+id/txtView_ToTime"
					android:tag="*Select To Time"
					/>	
			</RelativeLayout>
 		</LinearLayout>
 		
		
 	</ScrollView>
	
	<RelativeLayout
		android:id="@+id/view_footer"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:gravity="center"
		>
		<Button
			android:id="@+id/btn_Done"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/btn_done"
			/>
		<Button
			android:id="@+id/btn_Cancel"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/btn_Cancel"
			android:layout_toRightOf="@+id/btn_Done"
			/>	
	</RelativeLayout>		
</RelativeLayout>	
