<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/header_Mms"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:background="@drawable/bg_page"
	>
	<com.esp.spycatch.uc.PageTitle
		android:id="@+id/pageTitle"
		android:layout_width="fill_parent"
       	android:layout_height="wrap_content"
       	android:layout_alignParentTop="true"
		/> 
		<ScrollView
 		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_below="@+id/pageTitle"
		android:layout_above="@+id/view_footer"
		android:fillViewport="true"
		>
 		<LinearLayout
 			android:id="@+id/view_MmsSupport"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:padding="10dp"
 			>
 			<RelativeLayout
				android:id="@+id/View_SendTo"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="5dp"
				>
				<TextView
					android:id="@+id/txtView_SendTo"
					android:layout_height="wrap_content"
					android:layout_width="wrap_content"
					android:text="@string/txtview_settings_SendTo"
					style="@style/Caption"
					/>
				<EditText
					android:id="@+id/editText_SendTo"
				 	android:layout_width="fill_parent"
				 	android:layout_height="wrap_content"
				 	android:singleLine="true"
					android:layout_below="@+id/txtView_SendTo"
					android:tag="*Send To Mms"
					/>	
			</RelativeLayout>
		</LinearLayout>
 		
		
 	</ScrollView>
	
	<RelativeLayout
		android:id="@+id/view_footer"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:gravity="center"
		>
		<Button
			android:id="@+id/btn_Done"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/btn_done"
			/>
		<Button
			android:id="@+id/btn_Cancel"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/btn_Cancel"
			android:layout_toRightOf="@+id/btn_Done"
			/>	
	</RelativeLayout>		
</RelativeLayout>	