<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/header_setting"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:background="@drawable/bg_page"
	>
	<com.esp.spycatch.uc.PageTitle
		android:id="@+id/pageTitle"
		android:layout_width="fill_parent"
       	android:layout_height="wrap_content"
       	android:layout_alignParentTop="true"
		/> 
 	<ScrollView
 		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_below="@+id/pageTitle"
		android:layout_above="@+id/view_customdialog_footer"
		android:fillViewport="true"
		>
 		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:padding="10dp"
 			>
 			<RelativeLayout
 				android:id="@+id/View_Email"
				android:layout_width="fill_parent"
				android:layout_height="fill_parent"
				android:layout_weight="1"
				>
				<TextView
					android:id="@+id/txtView_customdialog_Email"
					android:layout_height="wrap_content"
					android:layout_width="wrap_content"
					android:text="@string/txtview_setting_Email"
					style="@style/Caption"
					/>
				<EditText
					android:id="@+id/editText_customdialog_Email"
					android:layout_width="fill_parent"
				 	android:layout_height="wrap_content"
				 	android:singleLine="true"
					android:layout_below="@+id/txtView_customdialog_Email"
					/>	
			</RelativeLayout>
 			<RelativeLayout
 				android:id="@+id/View_Password"
				android:layout_width="fill_parent"
				android:layout_height="fill_parent"
				android:layout_weight="1"
				>
				<TextView
					android:id="@+id/txtView_customdialog_Password"
					android:layout_height="wrap_content"
					android:layout_width="wrap_content"
					android:text="@string/txtview_settings_Password"
					style="@style/Caption"
					/>
				<EditText
					android:id="@+id/editText_customdialog_Password"
					android:layout_width="fill_parent"
				 	android:layout_height="wrap_content"
				 	android:password="true"
				 	android:singleLine="true"
					android:layout_below="@+id/txtView_customdialog_Password"
					/>	
			</RelativeLayout>
			<RelativeLayout
				android:id="@+id/View_SendTo"
				android:layout_width="fill_parent"
				android:layout_height="fill_parent"
				android:layout_weight="1"
				>
				<TextView
					android:id="@+id/txtView_customdialog_SendTo"
					android:layout_height="wrap_content"
					android:layout_width="wrap_content"
					android:text="@string/txtview_settings_SendTo"
					style="@style/Caption"
					/>
				<EditText
					android:id="@+id/editText_customdialog_SendTo"
				 	android:layout_width="fill_parent"
				 	android:layout_height="wrap_content"
				 	android:singleLine="true"
					android:layout_below="@+id/txtView_customdialog_SendTo"
					/>	
			</RelativeLayout>
			<RelativeLayout
				android:id="@+id/View_Weekdays"
				android:layout_width="fill_parent"
				android:layout_height="fill_parent"
				android:layout_weight="1"
				>
				<TextView
					android:id="@+id/txtView_customdialog_Weekdays"
					android:layout_height="wrap_content"
					android:layout_width="wrap_content"
					android:text="@string/txtview_settings_WeekDay"
					style="@style/Caption"
					/>
				<EditText
					android:id="@+id/editText_customdialog_Weekdays"
				 	android:layout_width="fill_parent"
				 	android:layout_height="wrap_content"
					android:editable="false"
					android:cursorVisible="false"	
					android:singleLine="true"
					android:layout_below="@+id/txtView_customdialog_Weekdays"
					/>	
			</RelativeLayout>
			<RelativeLayout
				android:id="@+id/View_FromTime"
				android:layout_width="fill_parent"
				android:layout_height="fill_parent"
				android:layout_weight="1"
				>
				<TextView
					android:id="@+id/txtView_customdialog_FromTime"
					android:layout_height="wrap_content"
					android:layout_width="wrap_content"
					android:text="@string/txtview_settings_FromTime"
					style="@style/Caption"
					/>
				<EditText
					android:id="@+id/editText_customdialog_FromTime"
				 	android:layout_width="fill_parent"
				 	android:layout_height="wrap_content"
					android:editable="false"
					android:cursorVisible="false"	
					android:singleLine="true"
					android:layout_below="@+id/txtView_customdialog_FromTime"
					/>	
			</RelativeLayout>
			<RelativeLayout
				android:id="@+id/View_ToTime"
				android:layout_width="fill_parent"
				android:layout_height="fill_parent"
				android:layout_weight="1"
				>
				<TextView
					android:id="@+id/txtView_customdialog_ToTime"
					android:layout_height="wrap_content"
					android:layout_width="wrap_content"
					android:text="@string/txtview_settings_ToTime"
					style="@style/Caption"
					/>
				<EditText
					android:id="@+id/editText_customdialog_FromTime"
				 	android:layout_height="wrap_content"
					android:layout_width="fill_parent"
					android:editable="false"
					android:cursorVisible="false"
					android:singleLine="true"	
					android:layout_below="@+id/txtView_customdialog_ToTime"
					/>	
			</RelativeLayout>
 		</LinearLayout>
 		
		
 	</ScrollView>
	
	<RelativeLayout
		android:id="@+id/view_customdialog_footer"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:gravity="center"
		>
		<Button
			android:id="@+id/btn_Done"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="Done"
			/>
		<Button
			android:id="@+id/btn_Cancel"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="cancel"
			android:layout_toRightOf="@+id/btn_Done"
			/>	
	</RelativeLayout>
</RelativeLayout>
